--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,6 @@
 driverName=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/webinar_database?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+url=jdbc:postgresql://localhost:5432/web_test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 login=postgres
-password=root
+password=postgres
+name=Andrew
+surname=Kas
