--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,10 +40,27 @@
         <jsp-file>/WEB-INF/jsp/error.jsp</jsp-file>
     </servlet>
 
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/errors/500.jsp</location>
+    </error-page>
+
+    <!--<servlet>
+        <servlet-name>500 error</servlet-name>
+        <jsp-file>/WEB-INF/errors/500.jsp</jsp-file>
+    </servlet>-->
+
+
     <servlet-mapping>
         <servlet-name>HelloWeb</servlet-name>
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
+
+    <!--<servlet-mapping>
+        <servlet-name>500</servlet-name>
+        <url-pattern>/500</url-pattern>
+    </servlet-mapping>-->
+
 
     <!--    localhost:8080/application/hello-->
 
@@ -67,6 +84,12 @@
         <filter-class>com.noirix.filter.AuthHeaderFilter</filter-class>
     </filter>
 
+    <filter>
+        <filter-name>HeadRequestFilter</filter-name>
+        <filter-class>com.noirix.filter.HeadRequestFilter</filter-class>
+    </filter>
+
+
 <!--    Ordering in filter mapping defines which filter should be invoked firstly-->
     <filter-mapping>
         <filter-name>CharsetFilter</filter-name>
@@ -74,6 +97,11 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>AuthHeaderFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>HeadRequestFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
