--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,18 +16,18 @@
 
     <servlet>
         <servlet-name>MainServlet</servlet-name>
-        <servlet-class>com.noirix.controller.FrontController</servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/FrontController</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 <!--    localhost:8080/application/FrontController-->
 
-    <servlet>
+ <!--   <servlet>
         <servlet-name>HelloWeb</servlet-name>
-        <jsp-file>/WEB-INF/jsp/hello.jsp</jsp-file>
+        <jsp-file>/WEB-INF/jsp/users.jsp</jsp-file>
     </servlet>
 
     <servlet>
@@ -45,10 +45,10 @@
         <location>/WEB-INF/errors/500.jsp</location>
     </error-page>
 
-    <!--<servlet>
+    <servlet>
         <servlet-name>500 error</servlet-name>
         <jsp-file>/WEB-INF/errors/500.jsp</jsp-file>
-    </servlet>-->
+    </servlet>
 
 
     <servlet-mapping>
@@ -56,13 +56,13 @@
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 
-    <!--<servlet-mapping>
+    <servlet-mapping>
         <servlet-name>500</servlet-name>
         <url-pattern>/500</url-pattern>
-    </servlet-mapping>-->
+    </servlet-mapping>
 
 
-    <!--    localhost:8080/application/hello-->
+        localhost:8080/application/hello
 
     <servlet-mapping>
         <servlet-name>ByeByeWeb</servlet-name>
@@ -73,7 +73,7 @@
         <servlet-name>Error</servlet-name>
         <url-pattern>/error</url-pattern>
     </servlet-mapping>
-
+                -->
     <filter>
         <filter-name>CharsetFilter</filter-name>
         <filter-class>com.noirix.filter.CharsetFilter</filter-class>
